# llvm_lab

./: .gitignore  Makefile  README.md
AsmToIR/: INSTR.cpp  INSTR.h  ISA.md  app1.ll  app2.ll  app_asm_IRgen1.cpp  app_asm_IRgen2.cpp  asm_app.s  genbrain.out  genbrain2.out
IRGen/: app.ll  appgen.cpp  brain.out  genbrain.out  gened_app.ll
SDL/: a.out  app.c  sim.c  sim.h  start.c
SDL/llvmIR/O1/: app.ll
SDL/llvmIR/O2/: app.ll
SDL/llvmIR/O3/: app.ll
pass/: CMakeLists.txt  analyse.py  insert_log_pass.cpp  log.c
spellcast2/: FrontEnd.l  FrontEnd.y  Makefile  app.ll  app.spell  grammar.MD  lexer.cpp  lexer.l  myparser  parser.cpp  parser.hpp  parser.y  spellcast2c.out
